2011-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amvault.8.xml: Improve.

2011-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm (volume_is_labelable): New method.
	* perl/Amanda/Taper/Scan/lexical.pm, perl/Amanda/Taper/Scan/oldest.pm:
	  Use volume_is_labelable from ScanInventory.
	* perl/Amanda/Taper/Scan/traditional.pm: Fix bad logging.
	* perl/Amanda/Taper/Scribe.pm: Print "autolabel disabled".
	* perl/Amanda/Taper/Worker.pm: Add debugging.
	* server-src/amvault.pl: Quit both changer, add debugging.

2011-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanup.pl, server-src/amcleanupdisk.pl: use
	Amanda::Debug.

2011-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	Fix for previous patch.
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Undo previous patch,
	* perl/Amanda/Script_App.pm: Do it here instead.
	  server-src/amlogroll.pl, server-src/amvault.pl
	  server-src/chunker.pl,
	  server-src/taper.pl: Import the debug method.
	* server-src/amoverview.pl, server-src/amserverconfig.pl,
	  server-src/amstatus.pl: Undo previous patch, they do not use the
	  debug file.

2011-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl, application-src/script-email.pl,
	  client-src/amdump_client.pl, common-src/amgetconf.pl,
	  device-src/amdevcheck.pl, device-src/amtapetype.pl,
	  server-src/amcheckdump.pl, server-src/amcleanup.pl,
	  server-src/amcleanupdisk.pl, server-src/amdump.pl,
	  server-src/amfetchdump.pl, server-src/amlabel.pl,