@@ -11,9 +11,11 @@ tapecycle 10 tapes	# the number of tapes in rotation
 			# cycle
 
 runtapes 1		# number of tapes to be used in a single run of amdump
-tapedev "tape:/dev/nst0"	# the no-rewind tape device to be used
-changerfile "@CONFIG_DIR@/@DEFAULT_CONFIG@/chg-manual.conf"
-changerdev "/dev/null"
+
+define changer my_single {
+    tpchanger "chg-single:tape:/dev/nst0"
+}
+tpchanger "my_single"
 tapetype HP-DAT			# what kind of tape it is (see tapetypes below)
 holdingdisk hd2 {
     directory "/var/lib/amanda/holdings/@DEFAULT_CONFIG@"
